# mcp-samples

./: .gitignore  README.md
azure-cli-mcp/: README.md
azure-mcp/: azure_mcp.py  main.py  pyproject.toml  requirements.txt
azure-storage-mcp/: .env.template  main.py  pyproject.toml  storage_mcp_server.py  test_storage_mcp.py
azure-storage-mcp/utils/: azure_storage_usage.py
azure_cli_mcp/: mcp-server.json
chat-mcp/: .env.example  README.md  app.py  mcp-server.json  pyproject.toml  requirements.txt
mcp/: docker.txt  docker2.txt  terminal-server.json
mcp-azure-devops-server/: main.py  pyproject.toml  start_server.sh
mcp-azure-devops-server/mcp_azure_devops/: server.py
mcp-azure-server/: main.py  pyproject.toml  server.py
mcp/client/langchain-client/: langchain-client.py  main.py  pyproject.toml
mcp/client/terminal-client/: main.py  pyproject.toml
mcp/client/terminal-client/client_dir/: client_file.txt
mcp/client/terminal-client/server/terminal-server/: terminal_server.py
mcp/client/terminal-client/workspace/: client_file_workspace.txt
mcp/server/terminal-server/: Dockerfile  README.md  requirements.txt  terminal_server.py
mcp/workspace/: langchain.txt  output.txt
